# bytes_parser

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md
.github/workflows/: ci.yml  crates.io-publish.yml
src/: bytes_parser.rs  endianness.rs  errors.rs  lib.rs  parser.rs
