[package]
name = "bytes_parser"
version = "0.1.1"
edition = "2021"
authors = ["Ivan De Marino <detronizator@gmail.com>"]
repository = "https://github.com/detro/bytes_parser"
homepage = "https://github.com/detro/bytes_parser"
description = "A simple wrapper to parse primitive Rust types from a slice of bytes"
license = "MIT OR Apache-2.0"
keywords = ["bytes", "parser", "wrapper", "primitive-types", "scalar-types"]
categories = ["encoding", "network-programming", "parsing"]
exclude = [
    ".gitignore",
    ".github/",
]

[dependencies]
thiserror = "1.0.38"
